--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,13 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FoodOrganizer"
+        android:theme="@style/Theme.FoodProdukt"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.FoodOrganizer.NoActionBar">
+            android:theme="@style/Theme.FoodProdukt">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
